fix gap top

--- a/wp-content/themes/meru/assets/sass/main.scss
+++ b/wp-content/themes/meru/assets/sass/main.scss
@@ -92,7 +92,7 @@ figure{
 
 header.wp-block-template-part {
   padding-top: 140px;
-  padding-bottom: 140px;
+  padding-bottom: 130px;
   position: relative;
   z-index: 10;
   margin-bottom: -322px;
